// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnHeader renders a column header with an active resize column 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row"
    data-row-id="test-table-header-row"
    height="3rem"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizeActive={false}
      key="Column-0"
      tableHeight={500}
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizeActive={false}
      key="Column-1"
      tableHeight={500}
      tableId="test-table"
    />
  </tr>
</thead>
`;

exports[`ColumnHeader renders a column header with callbacks 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row"
    data-row-id="test-table-header-row"
    height="3rem"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizeActive={false}
      key="Column-0"
      onColumnSelect={[MockFunction]}
      onResizeMouseDown={[MockFunction]}
      tableHeight={500}
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizeActive={false}
      key="Column-1"
      onColumnSelect={[MockFunction]}
      onResizeMouseDown={[MockFunction]}
      tableHeight={500}
      tableId="test-table"
    />
  </tr>
</thead>
`;

exports[`ColumnHeader renders a column header with tableHeight prop 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row"
    data-row-id="test-table-header-row"
    height="3rem"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizeActive={false}
      key="Column-0"
      tableHeight={500}
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizeActive={false}
      key="Column-1"
      tableHeight={500}
      tableId="test-table"
    />
  </tr>
</thead>
`;

exports[`ColumnHeader renders a default column header 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row"
    data-row-id="test-table-header-row"
    height="3rem"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizeActive={false}
      key="Column-0"
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizeActive={false}
      key="Column-1"
      tableId="test-table"
    />
  </tr>
</thead>
`;

exports[`ColumnHeader verifies that the column headers are not hidden when the hasColumnHeader is true 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row"
    data-row-id="test-table-header-row"
    height="3rem"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizeActive={false}
      key="Column-0"
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizeActive={false}
      key="Column-1"
      tableId="test-table"
    />
  </tr>
</thead>
`;

exports[`ColumnHeader verifies that the hasVisibleColumnHeaders prop hides the table column headers when set to false 1`] = `
<thead>
  <tr
    aria-rowindex={1}
    className="column-header-row hidden"
    data-row-id="test-table-header-row"
  >
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={0}
      displayName=" Vitals"
      headerHeight="3rem"
      id="Column-0"
      isActive={false}
      isResizable={false}
      isResizeActive={false}
      isSelectable={false}
      key="Column-0"
      tableId="test-table"
    />
    <Memo(InjectIntl(ColumnHeaderCell))
      columnIndex={1}
      displayName=" Patient"
      headerHeight="3rem"
      id="Column-1"
      isActive={false}
      isResizable={false}
      isResizeActive={false}
      isSelectable={false}
      key="Column-1"
      tableId="test-table"
    />
  </tr>
</thead>
`;
